Fix: resolviendo conflicto en SecurityConfig